fixedspacingfinal

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -43,7 +43,7 @@ nav {
   margin-left:20px;
   margin-right:20px;
   font-family: sans-serif;
-  margin:70px;
+  margin:60px;
 
 }
 
